# CONCORDIUM_TASK_4

./: .gitignore  README.md  concordium-swap-metadata.json  deploy_data.json  deploy_testnet_cis2_tokens.ps1  deploy_testnet_swap.ps1  index.html  template.env  testnet_cis2_tokens.ps1  testnet_swap.ps1
assets/: AccountInfoPage-1a1847bd.js  AccountInfoPage-1b3c182c.js  AccountInfoPage-648251d8.js  AccountInfoPage-6d762af9.js  AccountInfoPage-81b7448b.js  AccountInfoPage-9c667a85.js  AccountInfoPage-acc8e46d.js  AccountInfoPage-ebc3f955.js  AccountInfoPage-f4090cde.js  AccountInfoPage-fccd9ac8.js  Balance-a2a69e02.js  BecomeTheRichestPage-4c7cf44f.js  BecomeTheRichestPage-533d0d3d.js  BecomeTheRichestPage-671c184a.js  BecomeTheRichestPage-bd533cc0.js  BecomeTheRichestPage-ddae17f2.js  BecomeTheRichestPage-e9945999.js  ContractDataPage-1024f644.js  ContractDataPage-365735d2.js  ContractDataPage-9cd2bb2d.js  ContractDataPage-9de9348d.js  ContractDataPage-c2c0bd35.js  ContractDataPage-c97e83f0.js  ContractInfoPage-d6adc3dc.js  IndexPage-06754828.js  IndexPage-2754faf3.js  (+75 more)
cis2-token/: Cargo.toml  build_run.ps1
cis2-token/output/: cis2_token_schema.json  cis2_tokens_module.wasm.v1  schema.b64
cis2-token/src/: lib.rs
concordium-swap/: Cargo.toml  README.md  build_run.ps1  run.ps1  test_no_cap.ps1  test_run.ps1
concordium-swap/output/: bal_of_parameter.json  ccd_swap_schema.json  concordium_swap_module.wasm.v1  init_params.json  rm_liq_params.json  schema.b64  swap_ccd_for_tokenA_params.json  swap_token_a_for_ccd_params.json
concordium-swap/src/: lib.rs
(+70 files in other folders)
