[package]
name = "concordium_swap"
version = "0.1.0"
authors = [ "nabetse00 <esteban.diezlaiz@gmail.com>" ]
edition = "2018"
license = "MPL-2.0"
description = "Simple constant k Dex for swapping tokens on concordium blockchain. "

[features]
default = ["std", "crypto-primitives", "wee_alloc"]
std = ["concordium-std/std", "concordium-cis2/std"]
crypto-primitives = ["concordium-std/crypto-primitives"]
wee_alloc = ["concordium-std/wee_alloc"]

[dependencies]
concordium-std = {version = "6.0", default-features = false}
concordium-cis2 = {version = "3.0", default-features = false}

[lib]
crate-type=["cdylib", "rlib"]

[profile.release]
codegen-units = 1
opt-level = "s"
